sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:15: error: not found: value lenght
    lenght += -1
    ^